# qtbeef

./: .gitignore
libqt6c/: CMakeLists.txt  build.bat  build.zig
libqt6c/cmd/genbindings/: clangexec.go  codebuilder.go  config-allowlist.go  config-libraries.go  emitc.go  emitcabi.go  emitjson.go  main.go
libqt6c/include/: libqcommandlineparser.h  libqcoreapplication.h  libqdiriterator.h  libqfilesystemmodel.h  libqfilesystemwatcher.h  libqfontdatabase.h  libqicon.h  libqstandardpaths.h  libqstringlistmodel.h  libqtreewidget.h  libqvariant.h
libqt6c/include/cbor/: libqcborarray.h
libqt6c/include/designer/: libabstractintegration.h  libqdesigner_components.h
libqt6c/include/extras-attica/: libachievement.h  libdownloaddescription.h  libproject.h  libpublisher.h
libqt6c/include/extras-kcompletion/: libkcompletion.h  libkcompletionbox.h  libklineedit.h
libqt6c/include/extras-kconfig/: libkconfigloader.h  libkconfigskeleton.h  libkconfigwatcher.h  libksharedconfig.h
libqt6c/include/extras-kconfigwidgets/: libkconfigviewstatesaver.h
libqt6c/include/extras-kcoreaddons/: libkfileutils.h  libkmacroexpander.h  libkpluginmetadata.h  libkprocess.h  libkstringhandler.h
libqt6c/include/extras-kfilemetadata/: libusermetadata.h
libqt6c/include/extras-ki18n/: libklazylocalizedstring.h
libqt6c/include/extras-kimageannotator/: libKImageAnnotator.h
libqt6c/include/extras-kio/: libcommandlauncherjob.h  libkcoredirlister.h  libkdirlister.h  libkemailclientlauncherjob.h  libkfilefilter.h  libkfilefiltercombo.h  libkfileitemactions.h  libkfilewidget.h  libkimagefilepreview.h  libknewfilemenu.h  libkpreviewwidgetbase.h  libkshellcompletion.h  libkurifilter.h  libkurlcombobox.h
libqt6c/include/extras-knewstuff/: libenginebase.h  libentry.h  libquestion.h  libsearchrequest.h
libqt6c/include/extras-kparts/: libpart.h  libpartbase.h  libreadwritepart.h
libqt6c/include/extras-ksyntaxhighlighting/: libdefinition.h
libqt6c/include/extras-ktexteditor/: libattribute.h  libcommand.h  libeditor.h
libqt6c/include/extras-ktextwidgets/: libkfinddialog.h
libqt6c/include/extras-kwidgetsaddons/: libkacceleratormanager.h  libkcolorcombo.h  libkeditlistwidget.h  libkfontsizeaction.h  libktimecombobox.h
libqt6c/include/extras-sonnet/: libguesslanguage.h  libsettings.h  libspeller.h
libqt6c/include/foss-extras-packagekitqt/: libdaemon.h  liboffline.h
libqt6c/include/location/: libqplacesearchsuggestionreply.h
libqt6c/include/posix-extras-dbus/: libqdbusargument.h  libqdbusconnection.h
libqt6c/include/posix-extras-signon/: libauthservice.h  libauthsession.h
libqt6c/include/posix-restricted-qtermwidget/: libqtermwidget.h  libqtermwidget_interface.h
libqt6c/include/restricted-extras-qcustomplot/: libqcustomplot.h
libqt6c/include/restricted-extras-qscintilla/: libqsciscintilla.h
libqt6c/include/webengine/: libqwebengineglobalsettings.h  libqwebenginepage.h  libqwebengineprofile.h
libqt6c/include/websockets/: libqwebsockethandshakeoptions.h  libqwebsocketserver.h
libqt6c/src/: libqabstractanimation.hxx  libqabstractanimation.json  libqabstractbutton.cpp  libqabstractbutton.hpp  libqabstractbutton.hxx  libqabstractbutton.json  libqabstracteventdispatcher.cpp  libqabstracteventdispatcher.hpp  libqabstracteventdispatcher.json  libqabstractfileiconprovider.hxx  libqabstractfileiconprovider.json  libqabstractitemdelegate.hxx  libqabstractitemdelegate.json  libqabstractitemmodel.cpp  libqabstractitemmodel.hpp  libqabstractitemmodel.hxx  libqabstractitemmodel.json  libqabstractitemview.cpp  libqabstractitemview.hpp  libqabstractitemview.hxx  libqabstractitemview.json  libqabstractnativeeventfilter.hxx  libqabstractnativeeventfilter.json  libqabstractproxymodel.cpp  libqabstractproxymodel.hpp  libqabstractproxymodel.hxx  libqabstractproxymodel.json  libqabstractscrollarea.cpp  libqabstractscrollarea.hpp  libqabstractscrollarea.hxx  libqabstractscrollarea.json  libqabstractslider.cpp  libqabstractslider.hpp  libqabstractslider.hxx  libqabstractslider.json  libqabstractspinbox.cpp  libqabstractspinbox.hpp  libqabstractspinbox.hxx  libqabstractspinbox.json  libqabstracttextdocumentlayout.cpp  (+909 more)
libqt6c/src/cbor/: libqcborarray.c
libqt6c/src/designer/: libabstractformwindow.c  libabstractformwindow.h  libabstractintegration.c  libformbuilder.c  libformbuilder.h  libqdesigner_components.c
libqt6c/src/extras-attica/: libachievement.c  libcontent.c  libcontent.h  libdownloaddescription.c  libproject.c  libpublisher.c
libqt6c/src/extras-kcompletion/: libkcombobox.c  libkcombobox.h  libkcompletion.c  libkcompletionbase.c  libkcompletionbase.h  libkcompletionbox.c  libkhistorycombobox.c  libkhistorycombobox.h  libklineedit.c
libqt6c/src/extras-kconfig/: libkconfig.c  libkconfig.h  libkconfiggroup.c  libkconfiggroup.h  libkconfigloader.c  libkconfigskeleton.c  libkconfigwatcher.c  libkcoreconfigskeleton.c  libkcoreconfigskeleton.h  libkdesktopfile.c  libkdesktopfile.h  libksharedconfig.c
libqt6c/src/extras-kconfigwidgets/: libkcodecaction.c  libkcodecaction.h  libkconfigviewstatesaver.c  libkrecentfilesaction.c  libkrecentfilesaction.h
libqt6c/src/extras-kcoreaddons/: libkfileutils.c  libkmacroexpander.c  libknetworkmounts.c  libknetworkmounts.h  libkpluginmetadata.c  libkprocess.c  libkshell.c  libkshell.h  libkstringhandler.c
libqt6c/src/extras-kfilemetadata/: libusermetadata.c
libqt6c/src/extras-kguiaddons/: libkiconutils.c  libkiconutils.h
libqt6c/src/extras-ki18n/: libklazylocalizedstring.c  libklocalizedstring.c  libklocalizedstring.h  libkuitsetup.c  libkuitsetup.h
libqt6c/src/extras-kiconthemes/: libkiconengine.c  libkiconengine.h  libkiconloader.c  libkiconloader.h
libqt6c/src/extras-kimageannotator/: libKImageAnnotator.c
libqt6c/src/extras-kio/: libcommandlauncherjob.c  libdesktopexecparser.c  libdesktopexecparser.h  libkcoredirlister.c  libkdirlister.c  libkdiroperator.c  libkdiroperator.h  libkemailclientlauncherjob.c  libkencodingfiledialog.c  libkencodingfiledialog.h  libkfilefilter.c  libkfilefiltercombo.c  libkfileitemactions.c  libkfileplacesmodel.c  (+20 more)
(+452 files in other folders)
